# P8-project

./: .gitignore  .gitmodules  GroundingDino.py  README.md  came_settings.yaml  camera_config.yaml  camera_seetings.yaml  llava-oneVision.py  llava_python.py  panda_custom_controller.py  server_test.py  start_system.sh  tcp_server.py
P8-ggcnn_interface/: ggcnn_interface_4.py
P8-ggcnn_interface/ggcnn/: LICENSE  README.md  eval_ggcnn.py  requirements.txt  train_ggcnn.py
P8-ggcnn_interface/ggcnn/utils/data/: jacquard_data.py
P8-ggcnn_interface/ggcnn/utils/dataset_processing/: evaluation.py  grasp.py
P8-ggcnn_pybullet_sim/: vision_based_grasping.py
P8-ggcnn_pybullet_sim/ggcnn/: ggcnn.py
P8-ggcnn_pybullet_sim/ggcnn/models/: loss.py
P8-ggcnn_pybullet_sim/ggcnn/utils/data/structure/: grasp.py
P8-ggcnn_pybullet_sim/ggcnn/utils/dataset_processing/: mmcv.py
P8-ggcnn_pybullet_sim/models/: list.txt
P8-ggcnn_pybullet_sim/models/output_obj/: Bridge_Flat.urdf  Bridge_Peg.urdf  Bridge_Roof.urdf  Building_Snap_Lower.urdf  Building_Snap_Middle.urdf  Building_Snap_Top.urdf  Building_Triangle.urdf  Dovetail_Lower.urdf  Dovetail_Top.urdf  Hospital_Helipad.urdf  Hospital_Lower.urdf  Hospital_Top.urdf  Museum.urdf  Wheel.urdf  Wheel_Base.urdf
P8-ggcnn_pybullet_sim/utils/: camera.py  panda_sim_grasp_arm.py  simEnv.py  tool.py
ROS2_MAX/src/communication_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS2_MAX/src/communication_package/communication_package/: udp_reciver.py  udp_sender.py
ROS2_MAX/src/gg_CNN/: package.xml  setup.cfg  setup.py
ROS2_MAX/src/gg_CNN/gg_CNN/: gg_cnn_interface.py
ROS2_MAX/src/gg_cnn/: package.xml  setup.cfg  setup.py
ROS2_MAX/src/gg_cnn/gg_cnn/: gg_cnn_interface.py
ROS2_MAX/src/gg_cnn/gg_cnn/gg_cnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ROS2_MAX/src/gg_cnn/gg_cnn/share/gg_cnn/hook/: pythonpath_develop.dsv  pythonpath_develop.ps1  pythonpath_develop.sh
ROS2_MAX/src/llm/: package.xml  setup.py
ROS2_MAX/src/llm/llm/: llm_interface.py
ROS2_MAX/src/rob8_861/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS2_MAX/src/rob8_861/rob8_861/: tcp_server.py
ROS2_MAX/src/rob8_interfaces/: CMakeLists.txt  package.xml
ROS2_MAX/src/rob8_interfaces/msg/: Command.msg  LlmCommands.msg
ROS2_MAX/src/speech2text/: package.xml  setup.py
ROS2_MAX/src/speech2text/speech2text/: speech2text.py  ux.py
ROS2_MAX/src/vlm/: package.xml  setup.py
ROS2_MAX/src/vlm/vlm/: vlm_interface.py
VLM/: GroundingDino.py  chat_llava.py  llava-oneVision.py  llava-onevision-7.py  llava_python.py  llava_small.py  qwen2_5.py  qwen2_5_in.py
camera_calibration/: IntrinsicMatrix.npz  camera_calibration.py  controller_for_camera_calibration.py  requirements.txt
camera_calibration/FinalTransforms/: T_cam2gripper_Method_0.npz  T_cam2gripper_Method_1.npz  T_cam2gripper_Method_2.npz  T_cam2gripper_Method_3.npz  T_cam2gripper_Method_4.npz  T_cam2gripper_Method_5.npz  T_gripper2cam_Method_0.npz  T_gripper2cam_Method_1.npz  T_gripper2cam_Method_2.npz  T_gripper2cam_Method_3.npz  T_gripper2cam_Method_4.npz  T_gripper2cam_Method_5.npz
camera_calibration/T_base2ee/: T_base2ee_001.npz  T_base2ee_002.npz  T_base2ee_003.npz  T_base2ee_007.npz  T_base2ee_008.npz  T_base2ee_013.npz
camera_calibration/large_printed_checkerboard/T_base2ee/: T_base2ee_001.npz
camera_calibration/small_checkerboard_plate/T_base2ee/: T_base2ee_004.npz  T_base2ee_005.npz  T_base2ee_006.npz  T_base2ee_009.npz  T_base2ee_010.npz  T_base2ee_011.npz  T_base2ee_012.npz
gg-CNN/: gg_cnn_interface.py
