<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gg_CNN</name>
  <version>0.0.1</version>
  <description>GG_CNN node for grasp detection with RealSense depth images</description>

  <maintainer email="70377798+Jakob-Jorgensen@users.noreply.github.com">max</maintainer>
  <license>Apache 2.0</license>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python dependencies -->
  <exec_depend>torch</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scikit-image</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export section for build configuration -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
